Client: fixed Y overflow issue with greeter

--- a/client/styles/NavigationBar.module.scss
+++ b/client/styles/NavigationBar.module.scss
@@ -38,9 +38,10 @@ $inactive-color: rgba(255, 255, 255, 0.5);
 }
 
 .greeterContainer {
-  height: 100px;
   flex-grow: 1;
   display: grid;
+  align-items: baseline;
+  height: 60px;
   .greet {
     grid-column: 1;
     grid-row: 1;
@@ -50,6 +51,8 @@ $inactive-color: rgba(255, 255, 255, 0.5);
     font-weight: 700;
     font-size: 64px;
     text-align: center;
+    margin: 0;
+    padding: 0;
   }
 
   .name {
@@ -59,7 +62,9 @@ $inactive-color: rgba(255, 255, 255, 0.5);
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
-    transform: translateY(30%);
+    transform: translateY(-5px) translateX(5px);
+    margin: 0;
+    padding: 0;
   }
 }
 
